# specpkg

./: LICENSE  README.md  pyproject.toml
src/StoreData/: __init__.py  __main__.py  pack.py  unpack.py
