[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "StoreData"
version = "0.0.1"
authors = [
  { name="DevUser001", email="python_zhong@qq.com" },
]
description = "A package that store dictionaries into a special zipfile."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/python-zhong/StoreData/"
"Bug Tracker" = "https://github.com/python-zhong/StoreData/issues"