[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "specpkg"
version = "0.0.1"
authors = [
  { name="Dev-User-01", email="python_zhong@qq.com" },
]
description = "A package that store dictionary into a special archive."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/python-zhong/specpkg/"
"Bug Tracker" = "https://github.com/python-zhong/specpkg/issues"